tests/parsing/smtlib/v2.6/errors/009_exists_missing_body_1.expected
File "tests/parsing/smtlib/v2.6/errors/009_exists_missing_body_1.smt2", line 2, character 26-27:
2 | (assert (exists ((x int)) _))
                              ^
Error while parsing a term, read the reserved word '_',
      but expected a term (body for the existencial quantification).
